appId: ca.linewatchto.app
---
- launchApp:
    clearState: false

# Navigate to Status tab
- tapOn: "Status"
- assertVisible: "Service impacts"
- assertVisible: "All.*"

# Switch network to GO & UP on Alerts
- tapOn:
    id: "network-regional"
- assertVisible: "GO & UP"

# Switch back to TTC
- tapOn:
    id: "network-ttc"
- assertVisible: "TTC"
